--- a/index.css
+++ b/index.css
@@ -15,6 +15,9 @@ h6 {font-size: 18px;}
 .w3-display-container{
 	max-width:100%;
 }
+.w3-display-container img{
+	max-width:100%;
+}
 
 
 
@@ -23,10 +26,15 @@ h6 {font-size: 18px;}
 }
 
 .w3-display-middle{
+	margin-top: -50px;
 	width:100%;
 	text-align:center;
 	}
 
 .w3-btn{
  background: rgba(0, 0, 0, 0.7)
+}
+
+#slide1mobile{
+	display:none;
 }
