--- a/part1.css
+++ b/part1.css
@@ -13,7 +13,7 @@
 }
 
 .bg-quote {
-  background: url(images/SF/Cover_SF.JPG ) center center no-repeat;
+  background: url(images/Discover/Quote.jpg ) center center no-repeat;
   width:40px height:40px;
   background-attachment: fixed;
   background-size:cover;
